# rusty-minesweeper

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml
src/: app.rs  error.rs  lib.rs  main.rs
src/components/: button_cell.rs  mod.rs
src/css/: style.css
src/game/: state.rs
src/game/models/: board.rs  cell.rs  game.rs
src/models/: board.rs  cell.rs  game.rs
src/types/: cell.rs  game.rs
