[package]
name = "rusty-minesweeper"
version = "0.1.0"
edition = "2021"

[lints.clippy]
pedantic = "deny"
nursery = "deny"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
fastrand = "2.3.0"
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_12"] }
relm4 = "0.9.1"
thiserror = "2.0.11"
